--- a/Excersice_1.html
+++ b/Excersice_1.html
@@ -1,3 +1,49 @@
+<style>
+  .nike {
+    font-size: l24px;
+    font-weight: bold;
+  }
+
+  .price {
+    color: rgb(0, 118, 0);
+    font-weight: bold;
+  }
+
+  .cart {
+    background-color: rgb(255, 216, 20);
+    border: none;
+    width: 120px;
+    height: 30px;
+    border-radius: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+
+  .buy {
+    background-color: rgb(255, 164, 28);
+    border: none;
+    width: 100px;
+    height: 30px;
+    border-radius: 15px;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  .cart {
+    color: rgb(0, 113, 133);
+  }
+
+
+</style>
+
+
+
+
+
+
 <button>
   Click
 </button>
@@ -22,15 +68,15 @@
   Search with Google
 </a>
 
-<a href="https://www.amazon.com/" target="_blank">
+<a href="https://www.amazon.com/" target="_blank" class="amazon">
   Back to Amazon
 </a>
 
-<p>
+<p class="nike">
   Nike Black Running Shoes
 </p>
 
-<p>
+<p class="price">
   $39 - in stock.
 </p>
 
@@ -38,4 +84,4 @@
   Free delivery tomorrow.
 </p>
 
-<button>Add to cart</button> <button>Buy now</button>
+<button class="cart">Add to cart</button> <button class="buy">Buy now</button>
